--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hellow-three-js",
+  "name": "hellow-a-frame-js",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jandersonrafa/hellow-three-js.git"
+    "url": "git+https://github.com/jandersonrafa/hellow-a-frame.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jandersonrafa/hellow-three-js/issues"
+    "url": "https://github.com/jandersonrafa/hellow-a-frame/issues"
   },
-  "homepage": "https://github.com/jandersonrafa/hellow-three-js#readme",
+  "homepage": "https://github.com/jandersonrafa/hellow-a-frame#readme",
   "dependencies": {
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
@@ -39,7 +39,6 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
-    "ldapjs": "^1.0.2",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "popper.js": "^1.14.7",
@@ -47,6 +46,7 @@
     "react-dom": "^16.8.3",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.6.0",
