--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   },
   "homepage": "https://github.com/jandersonrafa/hellow-a-frame#readme",
   "devDependencies": {
+    
+  },
+  "dependencies": {
     "eslint": "^5.14.1",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-react": "^7.12.4",
@@ -31,9 +34,7 @@
     "style-loader": "^0.23.1",
     "webpack-dev-middleware": "^3.6.0",
     "webpack-hot-middleware": "^2.24.3",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "dependencies": {
+    "webpack-node-externals": "^1.7.2",
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
